--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mantine/core": "^5.9.5",
+    "@mantine/dates": "^5.9.5",
+    "@mantine/hooks": "^5.9.5",
     "@mui/material": "^5.11.1",
     "@next/font": "13.1.0",
     "@prisma/client": "^4.8.0",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "dayjs": "^1.11.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "next": "13.1.0",
     "prisma": "^4.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.57.1",
     "typescript": "4.9.4"
   }
 }
