--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^5.9.5",
     "@mantine/dates": "^5.9.5",
     "@mantine/hooks": "^5.9.5",
+    "@mui/lab": "^5.0.0-alpha.113",
     "@mui/material": "^5.11.1",
     "@next/font": "13.1.0",
     "@prisma/client": "^4.8.0",
