--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "sass": "^1.57.1",
+    "swr": "^2.0.0",
     "typescript": "4.9.4"
   }
 }
