--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "next": "13.1.0",
+    "next-pwa": "^5.6.0",
     "prisma": "^4.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
