--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,85 +1,20 @@
 {
-   "name": "Carbon",
+   "name": "Availability",
    "start_url": "/",
    "scope": "/",
    "background_color": "#5D4444",
-   "description": "Next-gen personal home inventory",
+   "description": "Find the best time to meet",
    "dir": "ltr",
    "lang": "en-US",
    "display": "standalone",
    "orientation": "portrait",
    "short_name": "Carbon",
-   "theme_color": "#5D4444",
+   "theme_color": "#fff",
    "prefer_related_applications": true,
    "capture_links": "new-client",
    "display_override": [
      "standalone", 
      "window-controls-overlay"
-   ],
-   "screenshots": [
-     {
-       "src": "https://cdn.jsdelivr.net/gh/Smartlist-App/Assets@latest/screenshots/1.png",
-       "sizes": "1080x1920",
-       "type": "image/png",
-       "platform": "narrow",
-       "label": "Create tasks, recipes, and wishlists"
-     },
-     {
-       "src": "https://cdn.jsdelivr.net/gh/Smartlist-App/Assets@latest/screenshots/2.png",
-       "sizes": "1080x1920",
-       "type": "image/png",
-       "platform": "narrow",
-       "label": "Clean your home"
-     },
-     {
-       "src": "https://cdn.jsdelivr.net/gh/Smartlist-App/Assets@latest/screenshots/3.png",
-       "sizes": "1080x1920",
-       "type": "image/png",
-       "platform": "narrow",
-       "label": "Track your inventory"
-     },
-     {
-       "src": "https://cdn.jsdelivr.net/gh/Smartlist-App/Assets@latest/screenshots/4.png",
-       "sizes": "1080x1920",
-       "type": "image/png",
-       "platform": "narrow",
-       "label": "Maximize your productivity with quick actions"
-     },
-     {
-       "src": "https://cdn.jsdelivr.net/gh/Smartlist-App/Assets@latest/screenshots/5.png",
-       "sizes": "1080x1920",
-       "type": "image/png",
-       "platform": "narrow",
-       "label": "Maximize your productivity with quick search"
-     },
-     {
-       "src": "https://cdn.jsdelivr.net/gh/Smartlist-App/Assets@latest/screenshots/6.png",
-       "sizes": "1080x1920",
-       "type": "image/png",
-       "platform": "narrow",
-       "label": "Seeking some inspiration?"
-     },
-     {
-       "src": "https://cdn.jsdelivr.net/gh/Smartlist-App/Assets@latest/screenshots/7.png",
-       "sizes": "1080x1920",
-       "type": "image/png",
-       "platform": "narrow",
-       "label": "View your items"
-     },
-     {
-       "src": "https://cdn.jsdelivr.net/gh/Smartlist-App/Assets@latest/screenshots/8.png",
-       "sizes": "1080x1920",
-       "type": "image/png",
-       "platform": "narrow",
-       "label": "Sync your home"
-     },
-     {
-       "src": "https://cdn.jsdelivr.net/gh/Smartlist-App/Assets@latest/screenshots/9.png",
-       "sizes": "1080x1920",
-       "type": "image/png",
-       "platform": "narrow",
-       "label": "Why choose Carbon?"
-     }
    ],
    "icons": [
      {
