--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "cookie": "^0.5.0",
     "dayjs": "^1.11.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.0",
     "next-pwa": "^5.6.0",
     "prisma": "^4.8.0",
