--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "sass": "^1.57.1",
     "swr": "^2.0.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.1"
   }
 }
