--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/cookie": "^0.5.1"
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.0"
   }
 }
