--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
    "lang": "en-US",
    "display": "standalone",
    "orientation": "portrait",
-   "short_name": "Carbon",
+   "short_name": "Availability",
    "theme_color": "#fff",
    "prefer_related_applications": true,
    "capture_links": "new-client",
